# dataquery_grpc

./: README.md
py/: dataquery_client.py  dataquery_pb2.py  dataquery_pb2_grpc.py
py/protos/: dataquery.proto
rs/: Cargo.toml  build.rs
rs/src/: dataquery-client.rs  dataquery-mongo.rs  dataquery-server.rs
