[package]
name = "dataquery_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dataquery-server"
path = "src/dataquery-server.rs"

[[bin]]
name = "dataquery-client"
path = "src/dataquery-client.rs"


# tonic is grpc implemenetation in Rust
# prost is proto implemenetation in Rust
# tokio is async runtime for Rust

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.7"
